manifest/base/bhasai/user-management-service/service-user-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management-service
spec:
  selector:
    app.kubernetes.io/name: user-management-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
