manifest/base/bhasai/user-management-service/ingress-user-management.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-management
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: "user-management-service.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-management-service
            port:
              number: 80
